--- a/index.html
+++ b/index.html
@@ -10,35 +10,54 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="stylesheet" href="css/custom.css">
-  <title>1-800 Flowers Video Response</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+    crossorigin="anonymous">
+  <title>1-800Flowers.com | Video Response Home</title>
 </head>
 
 <body>
-  <!-- Image and text -->
-  <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-      <img src="images/logo.jpg" width="300" height="200" class="d-inline-block align-top" alt="">
-    </a>
-  </nav>
-  <div class="row h-50">
-    <div class="col-sm-12 h-100 d-table">
-      <div class="container d-table-cell align-middle">
-        <form>
-          <div class="form-group">
-            <label for="phone">Phone Number</label>
-            <input type="number" class="form-control" id="phone" aria-describedby="phoneHelp" placeholder="(111)111-111">
-            <button type="button" class="btn btn-primary">Get Video</button>
+  <div class="d-flex w-100 align-items-start justify-content-center flex-column h-100">
+    <div class="navigation-container home w-100">
+      <!--navigation-->
+    </div>
+    <div class="d-flex flex-column h-100 w-100 align-items-center justify-content-center mb-auto p-2">
+      <img src="/images/flowers-icon-transparent.png" class="img-fluid home-icon pb-4" alt="Responsive image">
+      <h4>You recieved a message</h4>
+      <button type="button" class="btn btn-outline-secondary phone-trigger">Open Messge</button>
+
+      <!---PHONE NUMBER FORM--->
+      <form class="form-inline phone-container">
+        <div class="input-group">
+          <input type="tel" class="form-control" placeholder="phone" aria-label="phone" aria-describedby="basic-addon1">
+          <div class="input-group-append">
+            <a href="/recieved-video.html" class="btn btn-outline-secondary">submit</a>
           </div>
-        </form>
+        </div>
+      </form>
+      <!----------------------->
+    </div>
+
+    <h4 class="pt-4 w-100 text-center learn-trigger" data-toggle="collapse" href="#collapseExample" role="button"
+      aria-expanded="false" aria-controls="collapseExample">Learn More <br /><i class="fas fa-caret-down"></i>
+    </h4>
+    <!--COLLAPSE-->
+    <div class="collapse" id="collapseExample">
+      <div class="card card-body">
+        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim
+        keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
       </div>
     </div>
+    <!------------>
+
   </div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/js/custom.js"></script>
-  <script src="/js/scanner.js"></script>
+  <script src="/js/navbar.js"></script>
+  <script src="/js/index.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
