--- a/index.html
+++ b/index.html
@@ -1,67 +1,188 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/custom.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+      crossorigin="anonymous"
+    />
+    <title>1-800Flowers.com | Video Response Home</title>
+  </head>
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="css/custom.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-    crossorigin="anonymous">
-  <title>1-800Flowers.com | Video Response Home</title>
-</head>
+  <body>
+    <div
+      class="d-flex w-100 align-items-start justify-content-center flex-column h-100"
+    >
+      <div class="navigation-container home w-100"><!-- navigation --></div>
+      <div
+        class="d-flex flex-column h-100 w-100 align-items-center justify-content-center mb-auto p-2"
+      >
+        <img
+          src="/images/flowers-icon-transparent.png"
+          class="img-fluid home-icon pb-4"
+          alt="Responsive image"
+        />
+        <h4>You recieved a video message</h4>
+        <button
+          type="button"
+          class="btn btn-outline-secondary phone-trigger border-purple"
+        >
+          Open Messge
+        </button>
 
-<body>
-  <div class="d-flex w-100 align-items-start justify-content-center flex-column h-100">
-    <div class="navigation-container home w-100">
-      <!--navigation-->
-    </div>
-    <div class="d-flex flex-column h-100 w-100 align-items-center justify-content-center mb-auto p-2">
-      <img src="/images/flowers-icon-transparent.png" class="img-fluid home-icon pb-4" alt="Responsive image">
-      <h4>You recieved a message</h4>
-      <button type="button" class="btn btn-outline-secondary phone-trigger">Open Messge</button>
+        <!-- -PHONE NUMBER FORM- -->
+        <form class="form-inline phone-container">
+          <div class="input-group">
+            <input
+              type="tel"
+              class="form-control border-purple"
+              placeholder="phone"
+              aria-label="phone"
+              aria-describedby="basic-addon1"
+            />
+            <div class="input-group-append">
+              <a
+                href="/recieved-video.html"
+                class="btn btn-outline-secondary border-purple"
+                >submit</a
+              >
+            </div>
+          </div>
+        </form>
+        <!-- ------------------- -->
+      </div>
 
-      <!---PHONE NUMBER FORM--->
-      <form class="form-inline phone-container">
-        <div class="input-group">
-          <input type="tel" class="form-control" placeholder="phone" aria-label="phone" aria-describedby="basic-addon1">
-          <div class="input-group-append">
-            <a href="/recieved-video.html" class="btn btn-outline-secondary">submit</a>
+      <h4
+        class="pt-4 w-100 text-center learn-trigger"
+        data-toggle="collapse"
+        href="#collapseExample"
+        role="button"
+        aria-expanded="false"
+        aria-controls="collapseExample"
+      >
+        Learn More <br /><i class="fas fa-caret-down"></i>
+      </h4>
+      <!-- COLLAPSE -->
+      <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+          <h3 class="text-center">
+            Personalize your gift with a video message they'll love
+          </h3>
+          <!-- ----CAROUSEL---- -->
+          <div
+            id="carouselExampleIndicators"
+            class="carousel slide"
+            data-ride="carousel"
+          >
+            <ol class="carousel-indicators">
+              <li
+                data-target="#carouselExampleIndicators"
+                data-slide-to="0"
+                class="active"
+              ></li>
+              <li
+                data-target="#carouselExampleIndicators"
+                data-slide-to="1"
+              ></li>
+              <li
+                data-target="#carouselExampleIndicators"
+                data-slide-to="2"
+              ></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="/images/upload-solid.svg"
+                  class="carousel-image py-2"
+                  alt="upload-icon"
+                />
+                <h4>
+                  1. Enter your mobile phone number to view your personalized
+                  video message
+                </h4>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="/images/qrcode-solid.svg"
+                  class="carousel-image py-2"
+                  alt="QR-image"
+                />
+                <h4>2. Respond with a video message of your own</h4>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="/images/play-circle-solid.svg"
+                  class="carousel-image py-2"
+                  alt="play-icon"
+                />
+                <h4>3. Share a smile!</h4>
+                <br />
+              </div>
+            </div>
+            <a
+              class="carousel-control-prev"
+              href="#carouselExampleIndicators"
+              role="button"
+              data-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a
+              class="carousel-control-next"
+              href="#carouselExampleIndicators"
+              role="button"
+              data-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
         </div>
-      </form>
-      <!----------------------->
-    </div>
-
-    <h4 class="pt-4 w-100 text-center learn-trigger" data-toggle="collapse" href="#collapseExample" role="button"
-      aria-expanded="false" aria-controls="collapseExample">Learn More <br /><i class="fas fa-caret-down"></i>
-    </h4>
-    <!--COLLAPSE-->
-    <div class="collapse" id="collapseExample">
-      <div class="card card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim
-        keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
       </div>
+      <!-- -------- -->
     </div>
-    <!------------>
 
-  </div>
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/js/custom.js"></script>
-  <script src="/js/navbar.js"></script>
-  <script src="/js/index.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
-</body>
-
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/js/navbar.js"></script>
+    <script src="/js/index.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
