--- a/recieved-video.html
+++ b/recieved-video.html
@@ -39,7 +39,7 @@
                 <a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                     <div class="d-flex pt-3">
                         <div class="mr-auto">
-                            <h4>My Love For You</h4>
+                            <h4>From: Andy Yeung</h4>
                         </div>
                         <div>
                             <i class="fas fa-caret-down"></i>
@@ -48,62 +48,6 @@
                 </a>
             </div>
         </div>
-        <!--Options to Respond-->
-        <div class="row mb-0">
-            <div class="col-12">
-                <a href="response.html">
-                    <!-- <a onclick="return clickVideo();"> -->
-                    <span class="icon">
-                        <i class="fas fa-reply fa-lg"></i>
-                        <span class="icon-label">Respond</span>
-                    </span>
-                </a>
-                <input type="file" accept="video/*" capture="camera" id="recorder" style="display:none">
-                <a data-toggle="modal" data-target="#exampleModalCenter">
-                    <span class="icon">
-                        <i class="fas fa-share-alt fa-lg"></i>
-                        <span class="icon-label">Share</span>
-                    </span>
-                </a>
-            </div>
-        </div>
-        <!--SHARE MODAL-->
-        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <div class="row">
-                            <div class="share-icon">
-                                <a onclick='copyFunction("https://youtu.be/ldTmVPSKZ1Y")'><i class="fas fa-copy"></i>
-                                    Copy to Clipboard</a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="share-icon">
-                                <a href="sms:?&body=https%3A%2F%2Fyoutu.be%2FldTmVPSKZ1Y"><i class="fas fa-comment"></i>
-                                    Send SMS</a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="share-icon">
-                                <a href='fb-messenger://share/?link=https%3A%2F%2Fyoutu.be%2FldTmVPSKZ1Ysend-dialog&app_id=123456789'><i
-                                        class="fab fa-facebook-messenger"></i> Messenger</a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="share-icon">
-                                <a href="mailto:?subject=Someone's Gift&body=https://youtu.be/ldTmVPSKZ1Y" title="Share by Email"><i
-                                        class="fas fa-envelope"></i> Email </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--END SHARE MODAL-->
-
-        <!---------------------->
         <div class="row">
             <div class="col-12">
                 <div class="collapse" id="collapseExample">
@@ -118,6 +62,63 @@
                 </div>
             </div>
         </div>
+        <!--Options to Respond-->
+        <div class="row mb-0">
+            <div class="col-12">
+                <a href="response.html">
+                    <!-- <a onclick="return clickVideo();"> -->
+                    <span class="icon px-1">
+                        <i class="fas fa-reply fa-2x"></i>
+                        <span class="icon-label">Respond</span>
+                    </span>
+                </a>
+                <input type="file" accept="video/*" capture="camera" id="recorder" style="display:none">
+                <a data-toggle="modal" data-target="#exampleModalCenter">
+                    <span class="icon px-1">
+                        <i class="fas fa-share-alt fa-2x"></i>
+                        <span class="icon-label">Share</span>
+                    </span>
+                </a>
+            </div>
+        </div>
+
+        <!--SHARE MODAL-->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="share-icon">
+                                <a onclick='copyFunction("https://youtu.be/ldTmVPSKZ1Y")'><i class="fas fa-copy"></i>
+                                    Copy to Clipboard</a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="share-icon">
+                                <a href="sms:6462500138?&body=https%3A%2F%2Fyoutu.be%2FldTmVPSKZ1Y"><i class="fas fa-comment"></i>
+                                    Send SMS</a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="share-icon">
+                                <a href='fb-messenger://share/?link=https%3A%2F%2Fyoutu.be%2FldTmVPSKZ1Ysend-dialog&app_id=123456789'><i
+                                        class="fab fa-facebook-messenger"></i> Messenger</a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="share-icon">
+                                <a href="mailto:ayeung@1800flowers.com?subject=Someone's Gift&body=https://youtu.be/ldTmVPSKZ1Y"
+                                    title="Share by Email"><i class="fas fa-envelope"></i> Email </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--END SHARE MODAL-->
+
+        <!---------------------->
 
     </div>
     <div class="row justify-content-center">
@@ -161,7 +162,49 @@
             <!------------------->
         </div>
     </div>
+    <a data-toggle="modal" data-target="#shoppingCartModal" class="btn btn-default shadow btn-circle"><i class="fas fa-shopping-cart"></i></a>
+
+    <!--SHOPPING CART MODAL-->
+    <div class="modal fade" id="shoppingCartModal" tabindex="-1" role="dialog" aria-labelledby="shoppingCartModalTitle"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Shopping Cart</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Item</th>
+                                    <th scope="col">Qty</th>
+                                    <th scope="col">Cost</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">Lovable Puppy</td>
+                                    <td>1x</td>
+                                    <td>$10.00</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <h5>Sub-Total: $10</h5>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Continue Response</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Checkout</button>
+                </div>
+            </div>
+        </div>
     </div>
+    <!--END SHOPPING CART MODAL-->
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
