minor text updates

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           type="button"
           class="btn btn-outline-secondary phone-trigger border-purple"
         >
-          Open Messge
+          View Message
         </button>
 
         <!-- -PHONE NUMBER FORM- -->
@@ -128,6 +128,7 @@
                   alt="QR-image"
                 />
                 <h4>2. Respond with a video message of your own</h4>
+                <br />
               </div>
               <div class="carousel-item">
                 <img
