--- a/recieved-video.html
+++ b/recieved-video.html
@@ -50,14 +50,12 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <div class="collapse" id="collapseExample">
+                <div class="" id="collapseExample">
                     <div class="container-fluid">
-                        <p>Some sappy message. Blah blah
-                            blahfljdsl
-                            kfjlsjfljs
-                            fs;l;jglf
-                            jgdjgl;dfjg
-                            ldjgld;sjglsdljgdl;jgdslk</p>
+                        <p>Happy 1 Month! From the day we first met to when you're watching this, know that 
+                            every moment I spend with you is like a dream. Remember this song? 
+                            It was the song we bonded over when we first met. Here's to many more moments like this. Happy Anniversary  
+                            and too many more to come!</p>
                     </div>
                 </div>
             </div>
@@ -66,7 +64,6 @@
         <div class="row mb-0">
             <div class="col-12">
                 <a href="response.html">
-                    <!-- <a onclick="return clickVideo();"> -->
                     <span class="icon px-1">
                         <i class="fas fa-reply fa-2x"></i>
                         <span class="icon-label">Respond</span>
