changed the icons on carousel

--- a/recieved-video.html
+++ b/recieved-video.html
@@ -105,7 +105,7 @@
                         </div>
                         <div class="row">
                             <div class="share-icon">
-                                <a href="mailto:ayeung@1800flowers.com?subject=Someone's Gift&body=https://youtu.be/ldTmVPSKZ1Y"
+                                <a href="mailto:ayeung@1800flowers.com?subject=Andy's Video Message&body=https://youtu.be/ldTmVPSKZ1Y"
                                     title="Share by Email"><i class="fas fa-envelope"></i> Email </a>
                             </div>
                         </div>
