--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
-                  src="/images/upload-solid.svg"
+                  src="/images/mobile-alt-solid.svg"
                   class="carousel-image py-2"
                   alt="upload-icon"
                 />
@@ -123,21 +123,19 @@
               </div>
               <div class="carousel-item">
                 <img
-                  src="/images/qrcode-solid.svg"
+                  src="/images/reply-solid.svg"
                   class="carousel-image py-2"
                   alt="QR-image"
                 />
                 <h4>2. Respond with a video message of your own</h4>
-                <br />
               </div>
               <div class="carousel-item">
                 <img
-                  src="/images/play-circle-solid.svg"
+                  src="/images/share-square-solid.svg"
                   class="carousel-image py-2"
                   alt="play-icon"
                 />
                 <h4>3. Share a smile!</h4>
-                <br />
               </div>
             </div>
             <a
