--- a/recieved-video.html
+++ b/recieved-video.html
@@ -86,9 +86,10 @@
                 <div class="modal-content">
                     <div class="modal-body">
                         <div class="row">
-                            <div class="share-icon">
-                                <a onclick='copyFunction("https://youtu.be/ldTmVPSKZ1Y")'><i class="fas fa-copy"></i>
+                            <div class="share-icon copy-icon">
+                                <a value ="https://youtu.be/ldTmVPSKZ1Y"><i class="fas fa-copy"></i>
                                     Copy to Clipboard</a>
+                                <input type="text" value="https://youtu.be/ldTmVPSKZ1Y" class="copy-link" style="display:none">
                             </div>
                         </div>
                         <div class="row">
@@ -122,35 +123,35 @@
         <div class=col-12>
             <!--Potential Gifts-->
             <div class="card">
-                <div class="card-header">Recommended Gifts</div>
+                <div class="card-header">Say Thank You With a Gift</div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
                         <div class="d-flex align-items-center justify-content-start">
                             <div class="px-2">
-                                <img src="/images/gift.jpg" width=50px height="50px">
+                                <img src="https://cdn1.cheryls.com/wcsstore/CherylAndCompany/images/catalog/cco_FDY17_162801x.jpg" width=50px height="50px">
                             </div>
                             <div class="p-2">
-                                Lovable Pup
+                                Thank U Cookie Card
                             </div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="d-flex align-items-center justify-content-start">
                             <div class="px-2">
-                                <img src="/images/gift.jpg" width=50px height="50px">
+                                <img src="https://cdn1.cheryls.com/wcsstore/CherylAndCompany/images/catalog/cco_FDY17_162941x.jpg" width=50px height="50px">
                             </div>
                             <div class="px-2">
-                                Lovable Pup
+                                You're Toad-ally Awesome Cookie Card
                             </div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="d-flex align-items-center justify-content-start">
                             <div class="px-2">
-                                <img src="/images/gift.jpg" width=50px height="50px">
+                                <img src="https://cdn1.cheryls.com/wcsstore/CherylAndCompany/images/catalog/cco_FAL16_147981_v1x.jpg" width=50px height="50px">
                             </div>
                             <div class="px-2">
-                                Lovable Pup
+                                Thank you Gracelet Greeting
                             </div>
                         </div>
                     </li>
@@ -184,18 +185,18 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <th scope="row">Lovable Puppy</td>
+                                    <th scope="row">Thank U Cookie Card</td>
                                     <td>1x</td>
-                                    <td>$10.00</td>
+                                    <td>$5.99</td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
-                    <h5>Sub-Total: $10</h5>
+                    <h5>Sub-Total: $5.99</h5>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Continue Response</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Checkout</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Continue Response</button>
+                    <a target="_blank" href="https://www.cheryls.com/AjaxCheckoutDisplayView?catalogId=11102&langId=-1&storeId=10202"class="btn btn-secondary">Checkout</a>
                 </div>
             </div>
         </div>
