--- a/response.html
+++ b/response.html
@@ -111,7 +111,7 @@
                             <div class="post-upload px-2">
 
                                 <div class="input-group mb-2 mr-sm-2">
-                                    <input type="text" class="video-url">
+                                    <input type="text" class="video-url copy-link">
                                     <div class="input-group-append">
                                         <div class="input-group-text">
                                             <a data-toggle="modal" data-target="#exampleModalCenter">
@@ -142,8 +142,8 @@
             <div class="modal-content">
                 <div class="modal-body">
                     <div class="row">
-                        <div class="share-icon">
-                            <a onclick='copyInput("video-url")'><i class="fas fa-copy"></i>
+                        <div class="share-icon copy-icon">
+                            <a><i class="fas fa-copy"></i>
                                 Copy to Clipboard</a>
                         </div>
                     </div>
@@ -206,8 +206,8 @@
                     <h5>Sub-Total: $10</h5>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Continue Response</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Checkout</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Continue Response</button>
+                    <a target="_blank" href="https://www.cheryls.com/AjaxCheckoutDisplayView?catalogId=11102&langId=-1&storeId=10202"class="btn btn-secondary">Checkout</a>
                 </div>
             </div>
         </div>
