--- a/index.html
+++ b/index.html
@@ -43,12 +43,6 @@
           alt="Responsive image"
         />
         <h4>You recieved a video message</h4>
-        <button
-          type="button"
-          class="btn btn-outline-secondary phone-trigger border-purple"
-        >
-          View Message
-        </button>
 
         <!-- -PHONE NUMBER FORM- -->
         <form class="form-inline phone-container">
@@ -56,13 +50,13 @@
             <input
               type="tel"
               class="form-control border-purple"
-              placeholder="phone"
+              placeholder="Enter Phone Number"
               aria-label="phone"
               aria-describedby="basic-addon1"
             />
             <div class="input-group-append">
               <a
-                href="/recieved-video.html"
+                href="/video-response.html"
                 class="btn btn-outline-secondary border-purple"
                 >submit</a
               >
