--- a/response.html
+++ b/response.html
@@ -103,7 +103,7 @@
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0"
                                         aria-valuemin="0" aria-valuemax="100">
-                                        <span id="percent-transferred">
+                                        <span id="percent-transferred"></span>
                                     </div>
                                 </div>
                             </div>
